# rust_tutorial_v39

./: .env  Cargo.toml  Rocket.toml  diesel.toml  package-lock.json  package.json
front-end/: package-lock.json  package.json
front-end/src/: App.js  Button.css  Button.js
migrations/2024-08-30-112111_get_item/: up.sql
src/: main.rs  model.rs  schema.rs
