[package]
name = "rust_tutorial_v39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = {version = "2.2.0", features = ["postgres"]}
serde = {version = "1.0", features = ["derive"]}
dotenv = "0.15.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel", "diesel_postgres_pool"] }
dotenvy = "0.15"

#[global.databases]
#my_db = { url = { env = "DATABASE_URL" } }
